# madengine

./: .flake8  .gitignore  .pre-commit-config.yaml  .pre-commit-setup.md  ARCHITECTURE_FLOW.md  CHANGELOG.md  CLAUDE.md  MANIFEST.in  README.md  REFACTOR_PLAN.md  REFACTOR_SUMMARY.md  TOOLS_CONTEXT_FIX.md  UNIT_TESTS_IMPROVEMENTS.md  pyproject.toml  pytest.ini  setup.py
.github/: CODEOWNERS
.github/workflows/: ci.yml  publish.yml
docs/: README.md  baremetal-vm.md  batch-build.md  cli-reference.md  configuration.md  contributing.md  deployment.md  distributed-launchers.md  how-to-build.md  how-to-quick-start.md  how-to-run-multi-node.md  how-to-use-cache.md  installation.md  launchers.md  legacy-cli.md  profiling.md  usage.md
docs/superpowers/plans/: 2026-05-02-config-driven-yaml.md
docs/superpowers/specs/: 2026-05-02-config-driven-yaml-design.md
docs/wiki/: index.html
examples/: Makefile.smoke  cluster-smoke-checklist.md  run-smoke.sh
examples/baremetal-vm-configs/: README.md  multi-gpu-amd.json  single-gpu-amd.json  single-gpu-nvidia.json
examples/build-manifest/: batch.json  ci_incremental.json
examples/configs/: README.md
examples/configs/templates/: k8s.yaml  local.yaml  slurm.yaml
examples/direct-execution-configs/: README.md
examples/k8s-configs/: 01-single-node-single-gpu-tools.json  01-single-node-single-gpu.json  02-single-node-multi-gpu-tools.json  02-single-node-multi-gpu.json  03-multi-node-basic.json  04-multi-node-advanced.json  05-nvidia-gpu-example.json  06-data-provider-with-pvc.json  EXAMPLES_SUMMARY.md  INDEX.md  MINIMAL_CONFIG_FIX.md  README.md  SETUP_NOTE.md
examples/k8s-configs/basic/: 01-native-single-node-single-gpu-tools.json  01-native-single-node-single-gpu.json  01-single-node-single-gpu.json  02-single-node-multi-gpu.json  02-torchrun-single-node-multi-gpu-tools.json  02-torchrun-single-node-multi-gpu.json  03-multi-node-basic.json  03-torchrun-multi-node-basic.json  04-multi-node-advanced.json  04-torchrun-multi-node-advanced.json  05-nvidia-gpu-example.json  05-torchrun-nvidia-gpu-example.json  06-data-provider-with-pvc.json  megatron-lm-multi-node-basic.json  sglang-disagg-custom-split.json  sglang-disagg-multi-node-basic.json  sglang-multi-node-basic.json  slurm-multi-custom-split.json  slurm-multi-multi-node-basic.json  torchtitan-multi-node-basic.json  vllm-multi-node-basic.json
examples/k8s-configs/configs/: smoke-rdma-k8s.json
examples/k8s-configs/minimal/: README.md  custom-namespace-minimal.json  deepspeed-minimal.json  megatron-lm-exclude-node.json  megatron-lm-minimal.json  megatron-lm-optimized.json  multi-node-minimal.json  sglang-disagg-minimal.json  sglang-single-node-minimal.json  slurm-multi-minimal.json  torchrun-multi-gpu-minimal.json  torchrun-multi-node-minimal.json  torchrun-nvidia-gpu-minimal.json  torchrun-single-gpu-minimal.json  torchtitan-single-node-minimal.json  vllm-single-node-minimal.json
examples/profiling-configs/: README.md  rocm_trace_lite.json  rocm_trace_lite_default.json  rocprofv3_comprehensive.json  rocprofv3_compute_bound.json  rocprofv3_lightweight.json  rocprofv3_memory_bound.json  rocprofv3_multi_gpu.json  rocprofv3_multi_node.json  rocprofv3_multinode.json
examples/slurm-configs/: README.md
examples/slurm-configs/basic/: 01-single-node-single-gpu.json  02-single-node-multi-gpu.json  03-multi-node-basic-nodelist.json  03-multi-node-basic.json  04-multi-node-advanced.json  05-vllm-single-node.json  06-vllm-multi-node.json  07-sglang-single-node.json  08-sglang-multi-node.json  09-megatron-lm-multi-node.json  (+5 more)
manifests/: mad.env  run_manifest_primus_2node_qwen_localimage.json  run_manifest_pyt_vllm_dissag_llama-3.1-8b_3node_rdma_localimage.json
run_directory/: run_rocenv_tool.sh
run_directory/rocEnvTool/: rocenv_tool.py
src/madengine/: __init__.py  mad.py  mad_cli.py
tests/: TESTING_SUMMARY.md  conftest.py  test_cache.py  test_cleanup.py  test_cli_error_integration.py  test_cli_features.py  test_container_runner.py  test_contexts.py  test_custom_timeouts.py  test_debugging.py  test_discover.py  test_distributed_orchestrator.DEPRECATED.txt  test_distributed_orchestrator.py  test_docker_builder.py  test_error_system_integration.py  test_gpu_renderD_nodes.py  test_gpu_tool_managers.py  test_live_output.py  test_mad.DEPRECATED.txt  test_mad.py  test_mad_cli.py  test_misc.py  test_multi_gpu_arch.py  test_multi_platform_integration.py  test_orchestration.py  test_pip_packaging.py  test_pre_post_scripts.py  test_profiling.py  test_runners_base.DEPRECATED.txt  test_tags.py
tests/e2e/: test_build_workflows.py  test_data_workflows.py  test_execution_features.py  test_profiling_workflows.py  test_run_workflows.py  test_scripting_workflows.py
tests/fixtures/: utils.py
tests/integration/: test_batch_manifest_integration.py  test_cli_error_integration.py  test_console_integration.py  test_container_execution.py  test_docker_integration.py  test_error_system_integration.py  test_errors.py  test_gpu_management.py  test_multi_gpu_arch.py  test_orchestrator_workflows.py  test_platform_integration.py  test_profiling_tools_config.py
tests/unit/: test_additional_context_defaults.py  test_auth.py  test_build_orchestrator_mad_arch.py  test_cli.py  test_cli_constants.py  test_cli_utilities.py  test_cli_validation.py  test_config_integration.py  test_config_loader.py  test_config_schema.py  test_config_translator.py  test_constants.py  test_container_runner.py  test_container_runner_helpers.py  test_context_logic.py  test_database_mongodb.py  test_deployment.py  test_deployment_base.py  test_discover_models.py  test_docker_builder.py  test_dockerfile_mad_arch.py  test_error_handling.py  test_errors.py  test_execution.py  test_hydra_config_loader.py  test_k8s.py  test_k8s_secrets.py  test_local_image_reconcile.py  test_orchestration.py  test_orchestrator_logic.py  test_path_utils.py  test_primus.py  test_profiling_tools_config.py  test_reporting.py  test_reporting_superset.py  test_rocm_path.py  test_run_details.py  test_shell_quoting.py  test_slurm_multi.py  test_therock_markers.py  (+2 more)
(+319 files in other folders)
