[build-system]
requires = ["hatchling", "versioningit"]
build-backend = "hatchling.build"

[project]
name = "madengine"
dynamic = ["version"]
authors = [
  { name="Advanced Micro Devices", email="mad.support@amd.com" },
]
description = "MAD Engine is a set of interfaces to run various AI models from public MAD."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = ["ai", "ml", "docker", "rocm", "amd", "benchmark", "automation", "gpu"]
dependencies = [
  "pandas>=1.3",
  "GitPython>=3.1",
  "jsondiff>=2.0",
  "sqlalchemy>=1.4",
  "paramiko>=2.9",
  "tqdm>=4.60",
  "typing-extensions>=4.0",
  "pymongo>=4.0",
  "toml>=0.10",
  "typer>=0.9.0",
  "rich>=13.0.0",
  "click>=8.0.0",
  "jinja2>=3.0.0",
  "pyyaml>=6.0",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Testing",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.scripts]
madengine = "madengine.cli.app:cli_main"

[project.urls]
Homepage = "https://github.com/ROCm/madengine"
Repository = "https://github.com/ROCm/madengine"
Issues = "https://github.com/ROCm/madengine/issues"
Changelog = "https://github.com/ROCm/madengine/blob/develop/CHANGELOG.md"

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "pytest-xdist",
  "pytest-timeout",
  "pytest-mock",
  "pytest-asyncio",
  "black>=21.0.0",
  "flake8",
  "mypy>=0.910",
  "isort",
  "pre-commit",
]
# Optional dependencies for distributed deployments
# Note: SLURM requires no additional dependencies (uses CLI commands)
kubernetes = [
  "kubernetes>=28.0.0",
]
# Complete development environment (dev + kubernetes deployment)
all = [
  "kubernetes>=28.0.0",
  "pytest",
  "pytest-cov",
  "pytest-xdist",
  "pytest-timeout",
  "pytest-mock",
  "pytest-asyncio",
  "black>=21.0.0",
  "flake8",
  "mypy>=0.910",
  "isort",
  "pre-commit",
]

[tool.hatch.build]
artifacts = [
  "src/madengine/scripts/**/*",
  "src/madengine/deployment/templates/**/*",
]

[tool.hatch.version]
source = "versioningit"

[tool.versioningit.vcs]
method = "git"
default-tag = "v2.0.0"

[tool.versioningit.tag2version]
regex = "v(?P<version>.*)"

[tool.versioningit.format]
distance = "{base_version}.post{distance}+{vcs}{rev}"
dirty = "{base_version}+d{build_date:%Y%m%d}"
distance-dirty = "{base_version}.post{distance}+{vcs}{rev}.d{build_date:%Y%m%d}"

# Code formatting and linting configuration
[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["madengine"]
known_third_party = ["pytest", "pandas", "numpy", "sqlalchemy"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "paramiko.*",
    "pymongo.*",
    "toml.*",
    "jsondiff.*",
    "git.*",
    "kubernetes.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_paths = ["src"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["src/madengine"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.bandit]
exclude_dirs = ["tests", "venv", "build", "dist", ".git"]
skips = ["B101"]  # Skip assert_used (used in tests)
